RAIN-382: Download and Print, Take Actions buttons should be fixed with good alignment in the mobile application. (#256)

--- a/frontend/web/rainmaker/dev-packages/egov-tradelicence-dev/src/ui-containers-local/ResubmitActionContainer/index.scss
+++ b/frontend/web/rainmaker/dev-packages/egov-tradelicence-dev/src/ui-containers-local/ResubmitActionContainer/index.scss
@@ -36,6 +36,9 @@
   .wf-footer-container{
   display: flex;
   min-width: 50px !important;
+  div {
+    width: 100%;
+  }
   }
   
 }
